# cl-revenue-ops-r

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/revops/: Cargo.toml
crates/revops-analytics/: Cargo.toml
crates/revops-analytics/fixtures/golden/profitability/: classify_breakeven_active.json  classify_never_routed_mature.json  classify_old_loser_stagnant.json  classify_young_profitable.json  classify_zombie_after_failed_defib.json  marginal_roi_negative_profit.json  marginal_roi_profit_over_cost.json  marginal_roi_zero_cost_positive_profit.json  marginal_roi_zero_cost_zero_profit.json
crates/revops-analytics/src/: classification.rs  demand_flow.rs  flow.rs  growth.rs  kalman.rs  lib.rs  policy.rs  profitability.rs  protection.rs  telemetry.rs
crates/revops-analytics/tests/: classification.rs  demand_flow.rs  flow.rs  growth.rs  kalman.rs  policy.rs  profitability.rs  protection.rs  smoke.rs  telemetry.rs
crates/revops-core/: Cargo.toml
crates/revops-core/src/: canonical.rs  lib.rs  msat.rs  scid.rs
crates/revops-core/tests/: canonical_parity.rs  rounding_parity.rs
crates/revops-db/: Cargo.toml
crates/revops-db/src/: actor.rs  budget.rs  lib.rs  notifications.rs  owner.rs  queries.rs
crates/revops-db/tests/: actor_wal.rs  adoption.rs  budget.rs  budget_concurrency.rs  budget_prod_copy.rs  notifications.rs  owner.rs  queries.rs
crates/revops-econ/: Cargo.toml
crates/revops-econ/examples/: replay.rs
crates/revops-econ/src/: arbiter.rs  context.rs  cycle.rs  ev.rs  governor.rs  intents.rs  ledger.rs  lib.rs  pyfloat.rs  reason.rs  reconcile.rs  shadow.rs  snapshot.rs  types.rs
crates/revops-econ/tests/: arbiter.rs  conformance.rs  cycle.rs  governor.rs  intents.rs  ledger.rs  reconcile.rs  shadow.rs  snapshot.rs
crates/revops-fees/: Cargo.toml
crates/revops-fees/src/: admission.rs  cycle.rs  drain.rs  execution.rs  floors.rs  journal.rs  lib.rs  market.rs  mat3.rs  pid.rs  profiles.rs  pyjson.rs  pyrand.rs  rails.rs  reason.rs  replay.rs  replay_wire.rs  state_store.rs  vegas.rs
crates/revops-fees/src/thompson/: dynamics.rs  mod.rs  recompute.rs  sampling.rs  serde.rs
crates/revops-fees/tests/: admission.rs  cycle.rs  decision_context.rs  drain.rs  floors.rs  market.rs  mat3.rs  pid.rs  posterior.rs  production_blobs.rs  pyrand.rs  rails.rs  replay.rs  replay_wire.rs  state_roundtrip.rs  state_serde.rs  thompson_dynamics.rs  thompson_sampling.rs  vegas.rs
crates/revops-rebalance/: Cargo.toml
crates/revops-rebalance/src/: cooldowns.rs  defib.rs  engine.rs  errors.rs  ev.rs  executor.rs  facade.rs  lib.rs  modes.rs  planner.rs  route_policy.rs  router.rs  segstore.rs  types.rs
crates/revops-rebalance/tests/: cooldowns.rs  engine.rs  ev.rs  executor.rs  facade.rs  modes.rs  planner.rs  router.rs
crates/revops-rpc/: Cargo.toml
crates/revops-rpc/src/: lib.rs
crates/revops-rpc/tests/: timeout.rs
crates/revops/src/: config_resolve.rs  config_types.rs  fee_config.rs  fee_evidence.rs  fee_governor.rs  fee_scheduler.rs  fee_state.rs  hydration.rs  lib.rs  main.rs  notify.rs  options_table.rs  rpc_dashboard.rs  rpc_history.rs  rpc_report.rs  rpc_status.rs
crates/revops/tests/: config.rs  config_resolve.rs  fee_config.rs  fee_evidence.rs  fee_scheduler.rs  fee_state.rs  hydration.rs  manifest.rs  read_rpcs.rs  replay_cli.rs  status.rs
docs/audit/: 2026-07-19-shadow-parity-deployment-closeout.md  2026-07-22-rust-deep-audit-iteration-1.md
docs/port/: port-map.json
docs/runbooks/: observer-deploy.md
docs/superpowers/plans/: 2026-07-16-phase1a-foundations.md  2026-07-16-phase2-econ-core.md  2026-07-17-phase1b-observer.md  2026-07-17-phase3-analytics-budget.md  2026-07-17-phase4-fee-controller.md  2026-07-17-phase4b-wiring.md  2026-07-17-phase5-rebalance.md  2026-07-19-shadow-parity-deployment-closeout.md  2026-07-20-python-fee-authority-handoff.md  2026-07-20-rust-stateful-shadow-and-live-adapter.md  2026-07-20-shadow-runway-timers-and-deployment.md
docs/superpowers/specs/: 2026-07-16-rust-port-design.md  2026-07-19-shadow-parity-deployment-closeout-design.md  2026-07-20-rust-fee-cutover-runway-design.md
fixtures/: canonical_json.json  config_types.json  fixture.db  flow.json  hydration.json  kalman.json  options.json  pyfloat.json  rounding.json  schema.sql  telemetry.json
fixtures/fees/ceiling/: ceiling.json  probe_cap.json
fixtures/fees/cycle/: fee_debug_dts_summary.json  scenarios.json
fixtures/fees/discount/: sequences.json
fixtures/fees/floors/: calculate_floor.json  congestion.json  dynamic_chain_costs.json  effective_min_fee.json  flow_adjusted_ceiling.json  pinned_constants.json  rebalance_cost_floor.json
fixtures/fees/market/: boundary.json  cln_default.json  median.json  percentile.json  prior.json  ttl.json  undercut.json
fixtures/fees/mat3/: cholesky.json  det.json  invert.json  matvec.json
fixtures/fees/pid/: sequences.json
fixtures/fees/posterior/: helpers.json  pow_canary.json  recompute.json
fixtures/fees/pyrand/: sequences.json
fixtures/fees/rails/: blend_ratio.json  blend_target.json  exploration.json  kalman.json  profiles.json  std_threshold.json  step_cap.json  unroutable.json  zero_flow_guard.json  zero_flow_thresholds.json
fixtures/fees/replay/: complete_adjustment.v0.json  complete_skip.v0.json  effective_fallback.v0.json  failure_recovery.v0.json
fixtures/fees/sampling/: draws.json  shift.json
fixtures/fees/state_dict/: cases.json
fixtures/fees/state_roundtrip/: blobs.json  merge_matrix.json
fixtures/fees/update/: contextual_prune.json  failed_forward.json  sequences.json
fixtures/fees/vegas/: ma_leq_zero_guard.json  sequences.json
fixtures/golden/close_protection/: allowed_dynamic_no_tags_allowed.json  (+9 more)
fixtures/rebalance/: cooldowns.json  defib.json  ev.json  executor.json  inbound_fee.json  modes.json  partial_amounts.json  planner.json  router.json  segstore.json
tools/: replay_fee_capture_window.py
tools/diff-harness/: diff_config.py  diff_fee_decisions.py  diff_read_rpcs.py  engagement_gate.py
tools/tests/: test_replay_fee_capture_window.py
(+69 files in other folders)
