[workspace]
resolver = "2"
members = ["crates/revops", "crates/revops-core", "crates/revops-db", "crates/revops-rpc"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
