[workspace]
resolver = "2"
members = ["crates/revops", "crates/revops-core", "crates/revops-db", "crates/revops-econ", "crates/revops-rpc"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
hex = "0.4"
rusqlite = { version = "0.32", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
