[package]
name = "revops-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
revops-core = { path = "../revops-core" }
rusqlite = "0.32"        # NO "bundled" feature — system sqlite by design
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
