[package]
name = "revops-econ"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
revops-core = { path = "../revops-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
