[package]
name = "revops-econ"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
revops-core = { path = "../revops-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Phase 3 Task 10 (conformance un-defer flip): classification/protection and
# the budget-rail replays live in these crates. Dev-only — revops-analytics
# depends on revops-econ as a regular dependency, so this is a dev-dependency
# cycle only (fine in Cargo: dev-deps never build the library target).
revops-analytics = { path = "../revops-analytics" }
revops-db = { path = "../revops-db" }
# Phase 4 Task 12 (conformance un-defer flip, scenarios 08-13): the fee
# controller replays live in revops-fees. Dev-only, same cycle-is-fine
# reasoning as above — revops-fees depends on revops-econ as a regular
# dependency; this is a dev-dependency cycle, not a build-graph cycle.
revops-fees = { path = "../revops-fees" }
