# crates/revops-rebalance/Cargo.toml
[package]
name = "revops-rebalance"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# segstore.rs exports its snapshot as revops_fees::pyjson::OValue: the
# datastore blob the engine writes verbatim to CLN datastore key
# ["revenue","segment-observations"] needs the same order-preserving,
# Python-json.dumps-parity tree the fee state store uses (see
# revops-fees/src/pyjson.rs doc comment for why serde_json::Value's
# BTreeMap-backed Object won't do).
revops-fees = { path = "../revops-fees" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
