# crates/revops-rebalance/Cargo.toml
[package]
name = "revops-rebalance"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# segstore.rs exports its snapshot as revops_fees::pyjson::OValue: the
# datastore blob the engine writes verbatim to CLN datastore key
# ["revenue","segment-observations"] needs the same order-preserving,
# Python-json.dumps-parity tree the fee state store uses (see
# revops-fees/src/pyjson.rs doc comment for why serde_json::Value's
# BTreeMap-backed Object won't do).
revops-fees = { path = "../revops-fees" }
revops-econ = { path = "../revops-econ" }
# engine.rs (T7) consumes the MERGED unified budget rail's request type
# (`revops_db::budget::ReserveRequest`) — the no-double-spend property is
# foil-proven in Phase 3 and must be consumed, never reimplemented.
revops-db = { path = "../revops-db" }
serde.workspace = true
# serde_json's float_roundtrip feature is enabled at the workspace root (see
# root Cargo.toml) — golden-parity fixtures here depend on exact f64 parsing.
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
