[package]
name = "revops"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cln-plugin = "0.7"
cln-rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
revops-analytics = { path = "../revops-analytics" }
revops-core = { path = "../revops-core" }
revops-db = { path = "../revops-db" }
revops-fees = { path = "../revops-fees" }
revops-rpc = { path = "../revops-rpc" }
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
